Wed Sep  9 11:39:05 1998  Ron Unrau  <runrau@cygnus.com>

	* blockframe.c(find_pc_sect_partial_function): look for min syms in
	  the same section when trying to guess the end of a function.
	* symfile.c(list_overlays_command): use print_address_numeric
	* remote-sim.c: export simulator_command
start-sanitize-r5900
	* tm-r5900.h: add COP0 registers
end-sanitize-r5900
start-sanitize-sky
	* txvu-tdep.c: printvector and printvector-order commands
	* tm-txvu.h: add COP0 registers
	* mips-tdep.c: use NUM_CORE_REGS
end-sanitize-sky
	
1998-09-08  Jason Molenda  (jsm@bugshack.cygnus.com)

	* breakpoint.c (bpstat_stop_status):  Declare a bp match if the
	current fp matches the bp->fp OR if the current fp is less than
	the bp->fp if we're looking at a bp_step_resume breakpoint.

Tue Sep  8 19:42:58 1998  Stan Shebs  <shebs@andros.cygnus.com>

	* symtab.h (struct symtab): Remove EXTRA_SYMTAB_INFO hook,
	not currently used.
	* symfile.c (allocate_symtab): Deprecate use of
	INIT_EXTRA_SYMTAB_INFO here.

Fri Sep  4 15:33:25 1998  Stan Shebs  <shebs@andros.cygnus.com>

	* README: Update remote debugging and testsuite info.

Thu Sep  3 13:50:20 1998  Mark Alexander  <marka@cygnus.com>

	* config/mn10300/tm-mn10300.h (FP_REGNUM): Redefine to be a
	pseudo-register, not the same as a3.
	(D2_REGNUM, D3_REGNUM, A2_REGNUM, A3_REGNUM): Define.
	* mn10300-tdep.c (fix_frame_pointer): New function.
	(set_movm_offsets): Use register number macros instead of
	hard-coded constants.
	(mn10300_analyze_prologue): Fix to handle redefinition of FP_REGNUM.
	(mn10300_frame_chain):  Fix to handle redefinition of FP_REGNUM;
	use register number macros instead of hard-coded constants;
	add missing parameter to call of mn10300_analyze_prologue.
	(mn10300_frame_saved_pc): Use register number macros instead of
	hard-coded constants.

Tue Sep  1 12:04:57 EDT 1998  Zdenek Radouch   (radouch@cygnus.com)

	Changes to support/fix ARM/ELF port.  Use MAKE_MSYMBOL_SPECIAL for
	both ELF and COFF;