@@ -1,3 +1,8 @@
+Wed Sep  9 19:37:36 1998  Stan Shebs  <shebs@andros.cygnus.com>
+
+	* dbxread.c (IGNORE_SYMBOL): Remove definition, is never used.
+	* os9kread.c: Remove comment mentioning IGNORE_SYMBOL.
+
 Wed Sep  9 11:39:05 1998  Ron Unrau  <runrau@cygnus.com>
 
 	* blockframe.c(find_pc_sect_partial_function): look for min syms in
